# hecs_game

./: .gitignore  Cargo.toml
assets/maps/: map.tmx  map_infinite.tmx
assets/maps/tilesets/: shape.tsx  spring_forest.tsx
examples/: load_tmx.rs  many_cubes.rs
game_macros/: Cargo.toml
game_macros/src/: lib.rs
src/: client.rs  core.rs  graphics.rs  input.rs  instruction.rs  lib.rs  main.rs  math.rs
src/asset/: asset.rs  batch.rs  handle.rs  loader.rs  manager.rs  mod.rs  protocol.rs
src/framework/: app.rs  event.rs  game.rs  mod.rs  queue.rs  runner.rs  script.rs  tracker.rs  util.rs
src/graphics/: buffer.rs  color.rs  mod.rs  scene.rs  shader.rs  state.rs
src/graphics/g3d/: camera.rs  g3d.rs  material.rs  mesh.rs  mod.rs  shader.wgsl  shape.rs
src/map/: map.rs  tileset.rs
src/math/: mod.rs  shape.rs  transform.rs
src/plugins/: camera.rs  ecs.rs  flycam.rs  input.rs  mod.rs  window.rs
src/plugins/asset/: asset.rs  loader.rs  manager.rs  mod.rs  path_parts.rs  protocol.rs  storage.rs
src/plugins/asset2/: asset.rs  loader.rs  manager.rs  mod.rs  path_parts.rs  protocol.rs  storage.rs
src/plugins/engine/: camera.rs  client.rs  engine.rs  mod.rs  task.rs
src/plugins/graphics/: color.rs  graphics.rs  mod.rs  scene.rs  state.rs  texture.rs
src/plugins/graphics/g3d/: camera.rs  g3d.rs  material.rs  mesh.rs  mod.rs  shader.wgsl  shape.rs
src/plugins/graphics/scene/: mod.rs  scene.rs  scene_graph.rs
src/plugins/map/: layer.rs  map.rs  mod.rs  test_map.tmx  tile.rs  tileset.rs  tmx.rs
src/plugins/map/parse/: map.rs  mod.rs  tileset.rs
src/window/: mod.rs
src/winit_app/: mod.rs
src/winit_runner/: mod.rs
