[package]
name = "hecs_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
derive_more = "0.99.17"
env_logger = "0.10.1"
fxhash = "0.2.1"
hecs = "0.10.4"
log = "0.4.20"
pollster = "0.3.0"
smallvec = "1.11.2"
vecmap-rs = "0.2.0"
wgpu = "0.18.0"
winit = { version = "0.29.8", features = ["rwh_05"] }
