[package]
name = "hecs_game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.77"
bitflags = "2.4.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.10.1"
fxhash = "0.2.1"
glam = { version = "0.25.0", features = ["bytemuck"] }
hecs = "0.10.4"
log = "0.4.20"
pollster = "0.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }
slotmap = "1.0.7"
smallvec = "1.11.2"
uuid = { version = "1.6.1", features = ["v4"] }
vecmap-rs = "0.2.0"
wgpu = "0.18.0"
winit = { version = "0.29.8", features = ["rwh_05"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", optional = true }
tracing-chrome = { version = "0.7.1", optional = true }
identity-hash = "0.1.0"
rayon = "1.8.1"
image = "0.24.8"


[profile.release]
debug = true

[features]
profile = ["dep:tracing-subscriber", "dep:tracing-chrome"]
